--- a/Assignment-2/models.ipynb
+++ b/Assignment-2/models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 97,
    "source": [
     "import numpy as np \n",
     "import pandas as pd \n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 110,
    "source": [
     "data = pd.read_csv('FoDS-Assignment-2.csv')\n",
     "data.head()"
@@ -173,9 +173,18 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 110
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "source": [
+    "PREPROCESS = True"
+   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -194,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 112,
    "source": [
     "data.isnull().sum()"
    ],
@@ -221,7 +230,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 112
     }
    ],
    "metadata": {}
@@ -236,18 +245,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 113,
    "source": [
-    "data['sqft_living'] = data['sqft_living'].replace(np.NaN, data['sqft_living'].mean())\n",
-    "data['floors'] = data['floors'].replace(np.NaN, data['floors'].mean())\n",
-    "data['sqft_above'] = data['sqft_above'].replace(np.NaN, data['sqft_above'].mean())"
+    "if PREPROCESS:\n",
+    "    data['sqft_living'] = data['sqft_living'].replace(np.NaN, data['sqft_living'].mean())\n",
+    "    data['floors'] = data['floors'].replace(np.NaN, data['floors'].mean())\n",
+    "    data['sqft_above'] = data['sqft_above'].replace(np.NaN, data['sqft_above'].mean())\n",
+    "\n",
+    "else:\n",
+    "    data.dropna(subset=[\"sqft_living\", \"floors\", \"sqft_above\"], inplace=True)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 114,
    "source": [
     "X = data.iloc[:, :-1].to_numpy().T\n",
     "y = data.iloc[:, -1].to_numpy().reshape(-1, 1)"
@@ -257,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 115,
    "source": [
     "# Dataset Details\n",
     "X.shape, y.shape"
@@ -271,7 +284,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 115
     }
    ],
    "metadata": {}
@@ -285,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 116,
    "source": [
     "center = np.mean(X, axis=1, keepdims=True)\n",
     "euclidean_distance = np.linalg.norm((X - center), ord=2, axis=0)"
@@ -295,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 117,
    "source": [
     "np.mean(euclidean_distance), np.max(euclidean_distance), np.min(euclidean_distance)"
    ],
@@ -308,14 +321,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 36
+     "execution_count": 117
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 118,
    "source": [
     "plt.scatter(range(len(euclidean_distance)), euclidean_distance)\n",
     "plt.xlabel(\"Data Points\")\n",
@@ -331,7 +344,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 58
+     "execution_count": 118
     },
     {
      "output_type": "display_data",
@@ -350,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 119,
    "source": [
     "outliers_count = np.sum(euclidean_distance > 25 * np.mean(euclidean_distance))\n",
     "outliers_count"
@@ -364,7 +377,43 @@
       ]
      },
      "metadata": {},
-     "execution_count": 57
+     "execution_count": 119
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "source": [
+    "if PREPROCESS:\n",
+    "    outliers = euclidean_distance > 25 * np.mean(euclidean_distance)\n",
+    "    outliers_idx = np.argwhere(outliers == 1)\n",
+    "    A = X\n",
+    "    for idx in outliers_idx.squeeze():\n",
+    "        A = np.delete(A, idx, 1)\n",
+    "\n",
+    "    X = A "
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "source": [
+    "X.shape"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(13, 1186)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 121
     }
    ],
    "metadata": {}
@@ -372,7 +421,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Preprocessing"
+    "## Standardization"
    ],
    "metadata": {}
   },
